js/js.translator/testData/incremental/invalidation/implicitExport/main/m.kt
@JsModule("test")
external fun test(step: Int): String

fun box(step: Int): String {
    return test(step)
}
